# spark-cli

./: .env  .gitignore  Cargo.toml  shell.nix
nix/: rust.nix  sources.json
src/: controller.rs  init_db.rs  lib.rs  main.rs
src/cli/: error.rs  mod.rs  subcommands.rs
src/models/: error.rs  external.rs  internal.rs  mod.rs  note.rs  sources.rs
src/util/: error.rs  mod.rs  parse.rs
