[package]
name = "spark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
base32 = "0.4.0"
boolinator = "2.4.0"
clap = { version = "4.5.1", features = ["cargo"] }
comrak = "0.21.0"
console = "0.15.8"
csv = "1.3.0"
dotenvy = "0.15.7"
rand = "0.8.5"
regex = "1.10.3"
rusqlite = { version = "0.31.0", features = ["serde_json"] }
serde = "1.0.196"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
xdg = "2.5.2"
